# Jeux-de-la-vie

./: CMakeLists.txt  Cell.cpp  Cell.h  Display.cpp  Display.h  File_manager.cpp  File_manager.h  Game.cpp  Game.h  Grid  Grid.cpp  Grid.h  Interface  Interface.cpp  Interface.h  Rules.cpp  Rules.h  Save.cpp  Save.h  bibli.h  grid.txt  main  main.cpp
Sauvegarde/: save_10.txt
save/: save_1.txt  save_10.txt  save_2.txt  save_3.txt  save_4.txt  save_5.txt  save_6.txt  save_7.txt  save_8.txt  save_9.txt
tests/: CMakeLists.txt  test_Cell.cpp  test_File_manager.cpp  test_File_manger.cpp  test_Game.cpp  test_Grid.cpp  test_Rules.cpp
